--- a/embed.html
+++ b/embed.html
@@ -56,7 +56,7 @@ body {
 	height: 100%;
 	width: 100%;
 	background-size: 80% 80%;
-	background-image: url(logo-embed.svg);
+	background-image: url(factgrid.png);
 	background-repeat: no-repeat;
 	background-position: center;
 	z-index: -1;
